@@ -2,4 +2,5 @@ As we briefly discussed via email, it would be nice if sync could sync only some
 
 [[!meta author=yoh]]
 [[!tag projects/datalad]]
-[[!tag needsthought]]
+
+> [[fixed|done]] --[[Joey]]
