@@ -1,5 +1,9 @@
 git-annex (7.20200205) UNRELEASED; urgency=medium
 
+  * Added sync --only-annex, which syncs the git-annex branch and annexed
+    content but leaves managing the other git branches up to you.
+  * Added annex.synconlyannex git config setting, which can also be set with
+    git-annex config to configure sync in all clones of the repo.
   * fsck --from remote: Fix a concurrency bug that could make it incorrectly
     detect that content in the remote is corrupt, and remove it, resulting in
     data loss.
